Build coverage for multiple Pythons

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,16 @@ on:
 jobs:
   coverage:
     runs-on: ubuntu-20.04
-
+    strategy:
+      matrix:
+        python-version: [2.7, 3.9]
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
 
       - run: |
           pip install coverage
