--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,10 +40,13 @@ jobs:
     steps:
       - uses: actions/download-artifact@v2
       - run: |
+          pip install coverage
           ls -la
-          coverage combine
-          coverage report
-          coverage html -d public_html
+          cd artifact
+          ls -la
+          python -m coverage combine
+          python -m coverage report
+          python -m coverage html -d public_html
       - uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
