--- a/.github/workflows/default-versions.yml
+++ b/.github/workflows/default-versions.yml
@@ -12,3 +12,5 @@ jobs:
     steps:
     - run: python --version
     - run: python3 --version
+    - run: python3 -c "import sys; print(sys.stdout.isatty())"
+    
